# obsidian_daily_bible_study_generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
ADRs/: ADR-001-bible-study-planner-architecture.md  ADR-002-flexible-start-date.md  ADR-003-end-date-option.md  ADR-004-enhanced-dataview-properties.md  ADR-005-vault-bible-linking.md  ADR-006-custom-plan-capability.md  ADR-006-custom-study-plans.md
bible_study_planner/: __init__.py  __main__.py  cli.py
bible_study_planner/bible/: __init__.py  data_manager.py  vault_linker.py
bible_study_planner/models/: __init__.py  book.py  reading_segment.py  study_day.py
bible_study_planner/plans/: __init__.py  base.py  canonical.py
data/: bible_metadata.json  new_testament_books.json  old_testament_books.json
